--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'java-library'
 }
 
 configurations {
@@ -18,6 +19,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '5.10.0'
     implementation 'org.json:json:20230618'
+    api 'io.github.typhon0:AnimateFX:1.2.4'
 }
 
 javafx {
