Fix JAVA_HOME export in GitLab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 build:
   stage: build
   script:
-    - JAVA_HOME=/usr/bin/java
+    - export JAVA_HOME=/usr/bin/java
     - ./gradlew build
   only:
     - master
