--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 build:
   stage: build
   script:
-    - export JAVA_HOME=/usr/bin/java
+    - export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
     - ./gradlew build
   only:
     - master
