--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,12 @@
 stages:
   - build
 
+before_script:
+  - export GRADLE_USER_HOME=`pwd`/.gradle
+
 build:
   stage: build
   script:
-    - export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java 2>/dev/null) 2>/dev/null) 2>/dev/null) 2>/dev/null)
     - ./gradlew build
   only:
     - master
