--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,8 @@
+image: gradle:8-jdk17-alpine
+
+variables:
+  GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dhttps.proxyHost=194.254.199.96 -Dhttps.proxyPort=3128"
+
 stages:
   - build
 
