Ajout du jar file pour le pacman et modif du gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
   stage: build
   image: gradle:8.3.0-jdk17
   script:
-    - ./gradlew build
+    - ./gradlew shadowJar
   only:
     - master
     - develop
